--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevComplete Studios</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-200 scroll-smooth">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
